<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.jacob.eatapp.CreateEvent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextEventTitle"
            android:hint="Title" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:minHeight="100dp"
            android:id="@+id/editTextEventDescription"
            android:hint="Description"
            android:inputType="textCapSentences|textAutoCorrect"
            android:autoText="true"
            android:lines="6" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/numofPeopleInput">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Number of people"
            android:inputType="numberDecimal"
            android:id="@+id/editTextEventNumOfPeople" />
    </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/eventPriceInputLayout">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Price per person"
                android:inputType="numberDecimal"
                android:id="@+id/editTextEventPrice" />
        </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick_time"
        android:id="@+id/choosetime"
        android:layout_gravity="left"
        android:onClick="showTimePickerDialog" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:id="@+id/choosedate"
        android:text="@string/pick_date"
        android:onClick="showDatePickerDialog"
        />
    </LinearLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/publishevent"
        android:id="@+id/publishEventButton" />
    </LinearLayout>
</RelativeLayout>

